--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -54,6 +54,7 @@
         <div class="flex justify-between items-center mb-4">
         <div class="flex gap-2">
           <button class="btn-add" id="btn-add" onclick="addRow(this)" value="create">Crear Nuevo</button>
+          <button class="btn-end" id="btn-end" onclick="endTask(this)">Finalizar Tarea</button>
           <button class="btn-pause" id="btn-pause">Pausar</button>
         </div>
         <!-- <button class="btn-add" id="btn-send">Enviar Datos</button> -->
