--- a/src/pages/modal.html
+++ b/src/pages/modal.html
@@ -32,11 +32,15 @@
             <select name="client" id="client"></select>
           </div>
           <div class="form-group">
-            <label for="client">Tarea</label>
+            <label for="brand">Marca</label>
+            <select name="brand" id="brand"></select>
+          </div>
+          <div class="form-group">
+            <label for="task">Tarea</label>
             <select name="task" id="task"></select>
           </div>
           <div class="form-group pause">
-            <label for="client">Pausa</label>
+            <label for="pause">Pausa</label>
             <select name="pause" id="pause"></select>
           </div>
           <div class="form-group">
