[REF] Refactor modal logic and UI components; remove unused validation functions

--- a/src/pages/modal.html
+++ b/src/pages/modal.html
@@ -51,11 +51,11 @@
             <div class="time-row">
               <label>Inicio:</label>
               <input name="time_start" type="text" placeholder="00:00"/>
-              <button id="btn-tm-start" type="button" class="time-mode" onclick="toggleAmPm(this)">AM</button>
+              <button id="btn-tm-start" type="button" class="time-mode">AM</button>
               
               <label>Final:</label>
               <input name="time_end" type="text" placeholder="00:00"/>
-              <button id="btn-tm-end" type="button" class="time-mode" onclick="toggleAmPm(this)">AM</button>
+              <button id="btn-tm-end" type="button" class="time-mode">AM</button>
             </div>
           </div>
           <button type="submit" class="button-svg">
