[IMP] Refactor task management UI and functionality

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -53,9 +53,9 @@
         <h2 class="text-lg font-medium mb-2 element">Lista de trabajo del día</h2>
         <div class="flex justify-between items-center mb-4">
         <div class="flex gap-2">
-          <button class="btn-end" id="btn-end">Cambiar de tarea</button>
-          <button class="btn-pause" id="btn-pause">Pausar</button>
-          <button class="btn-add" id="btn-add" value="create">Horas anteriores</button>
+          <button class="btn-end" id="btn-end" data-state="normal">Cambiar de tarea</button>
+          <!-- <button class="btn-pause" id="btn-pause">Pausar</button> -->
+          <button class="btn-add hidden" id="btn-add" value="create">Horas anteriores</button>
         </div>
         <!-- <button class="btn-add" id="btn-send">Enviar Datos</button> -->
         
