--- a/src/pages/modal.html
+++ b/src/pages/modal.html
@@ -45,7 +45,7 @@
           </div>
           <div class="form-group">
             <label for="description">Descripción:</label>
-            <input type="text" id="description" name="description" maxlength="50"/>
+            <input type="text" id="description" name="description" maxlength="50" required="1"/>
             <span class="note">Nota: Máximo 50 caracteres</span>
           </div>
           <div class="time-container hidden">
